# Algorithm-comparisons-between-optimized-and-greedy-algorithms

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.bat  run.sh  setup_dependencies.bat  setup_dependencies.sh
include/ai/: ChatbotService.h
include/algorithms/: BellmanFordRoute.h  ComparisonManager.h  DijkstraRoute.h  FloydWarshallRoute.h  GreedyRoute.h  MSTRoute.h  RegularRoute.h  RouteAlgorithm.h  TSPRoute.h
include/app/: Application.h
include/core/: CostModel.h  EventLog.h  MapGraph.h  RoadEvent.h  RouteResult.h  TollStation.h  Truck.h  WasteNode.h  WasteSystem.h
include/environment/: EnvironmentController.h  EnvironmentTypes.h  MissionPresentation.h  MissionPresentationUtils.h  SeasonProfile.h
include/persistence/: FileExporter.h  ResultLogger.h
include/visualization/: AnimationController.h  ChatbotPanel.h  CityAssetLibrary.h  CityBatchGeometry.h  CityRenderUtils.h  CityShapeDrawing.h  CityThemeRenderer.h  CityThemeRendererInternal.h  DashboardActions.h  DashboardStyle.h  DashboardUI.h  DashboardUIInternal.h  IThemeRenderer.h  IsometricRenderer.h  OceanShader.h  RenderUtils.h  SeaThemeRenderer.h  SeaThemeRendererInternal.h
output/: summary_20260407_150112.txt
src/: main.cpp
src/ai/: ChatbotService.cpp
src/algorithms/: AlgorithmUtils.h  BellmanFordRoute.cpp  ComparisonManager.cpp  DijkstraRoute.cpp  FloydWarshallRoute.cpp  GreedyRoute.cpp  MSTRoute.cpp  RegularRoute.cpp  TSPRoute.cpp
src/app/: Application.cpp  ApplicationActions.cpp  ApplicationChatbot.cpp  ApplicationInternal.h
src/core/: CostModel.cpp  EventLog.cpp  MapGraph.cpp  RouteResult.cpp  Truck.cpp  WasteNode.cpp  WasteSystem.cpp
src/environment/: EnvironmentController.cpp  MissionPresentationUtils.cpp  SeasonProfile.cpp
src/persistence/: FileExporter.cpp  ResultLogger.cpp
src/visualization/: AnimationController.cpp  ChatbotPanel.cpp  CityAssetLibrary.cpp  CityBatchGeometry.cpp  CityRenderUtils.cpp  CityShapeDrawing.cpp  CityThemeRenderer.cpp  CityThemeRendererActors.cpp  CityThemeRendererAssets.cpp  CityThemeRendererBuildings.cpp  CityThemeRendererEnvironment.cpp  CityThemeRendererGround.cpp  CityThemeRendererNetwork.cpp  CityThemeRendererRoutes.cpp  CityThemeRendererTraffic.cpp  CityThemeRendererTransit.cpp  DashboardPanels.cpp  DashboardStyle.cpp  DashboardUI.cpp  IsometricRenderer.cpp  OceanShader.cpp  RenderUtils.cpp  SeaThemeRenderer.cpp  SeaThemeRendererBoat.cpp  SeaThemeRendererDecor.cpp  SeaThemeRendererGround.cpp  SeaThemeRendererHelpers.cpp  SeaThemeRendererNodes.cpp  SeaThemeRendererTransit.cpp
tests/: CoreLogicTests.cpp  EnvironmentCoreTests.cpp  GraphAlgorithmTests.cpp  PersistenceIntegrationTests.cpp  TestHarness.h
tests/backend/: BackendLogicTestMain.cpp
tests/backend/algorithms/: AlgorithmResultsAreConsistentWithWasteSystemCostPopulation.cpp  AllAlgorithmsReturnEmptyForEmptyEligibleSet.cpp  AllAlgorithmsReturnValidClosedToursOnSameScenario.cpp  BellmanFordRouteHandlesOneNodeTour.cpp  BellmanFordRouteUsesCheapestInsertionAndCoversNodes.cpp  DijkstraRouteDepotOrderChangesWhenRoadBlocked.cpp  DijkstraRouteOrdersByDepotShortestDistance.cpp  FloydWarshallRouteHandlesOneNodeTour.cpp  FloydWarshallRouteUsesFarthestInsertionAndCoversNodes.cpp  GreedyRouteChoosesNearestCurrentNeighbor.cpp  GreedyRouteRespectsBlockedRoadWhenChoosingNextStop.cpp  MstRouteIsDeterministicOnKnownGraph.cpp  MstRouteProducesClosedCoverageRoute.cpp  RegularRouteReturnsInvalidEmptyResultForNoEligibleNodes.cpp  RegularRouteVisitsEligibleNodesInInputOrder.cpp  TspRouteFiltersHqFromEligibleInput.cpp  TspRouteFindsExactOptimalSmallTour.cpp  TspRouteHandlesSingleEligibleNode.cpp
tests/backend/common/: CoreTestUtils.h  GraphTestUtils.h  PersistenceTestUtils.h  TestHarness.h
tests/backend/comparison/: ComparisonManagerClearResultsEmptiesComparisonState.cpp  ComparisonManagerRegistersAllAlgorithms.cpp  ComparisonManagerRejectsInvalidAlgorithmIndices.cpp  ComparisonManagerRunsAllAlgorithmsAndSelectsLowestCost.cpp  ComparisonManagerRunsSingleAlgorithmAndLogsCompletion.cpp
tests/backend/core/: CollectionStatusCanBeSetAndResetForNewDay.cpp  ComputeWasteCollectedSkipsHqAndInvalidNodes.cpp  CostModelDefaultValuesAndDerivedFuelCost.cpp  CostModelSettersDriveCostCalculations.cpp  CostModelZeroSpeedReturnsZeroTravelTime.cpp  EfficiencyBonusBoundariesAreExclusiveUpperLimits.cpp  EligibilityFilteringHonorsThresholdAndExcludesHq.cpp  EligibilityOverrideDoesNotChangeStoredThreshold.cpp  EventLogAppendsAndReturnsRecentNewestFirst.cpp  EventLogClearResetsLinkedList.cpp  GenerateNewDayAdvancesDayAndFuelPriceRange.cpp  GenerateNewDayWithSameSeedIsDeterministic.cpp  HqNodeIsNeverEligibleAndAlwaysLowUrgency.cpp  MarkNodeCollectedIgnoresInvalidNodeIds.cpp  PopulateCostsFillsEveryCostField.cpp  PopulateCostsReportsZeroTimeForBlockedManualSegment.cpp  RouteResultDefaultsAreInvalidAndZeroed.cpp  RouteResultSummaryIncludesKeyMetrics.cpp  TollStationCrossingIsBidirectional.cpp  TollStationValidatesConstructorArguments.cpp  WasteAmountUsesCapacityAndPercent.cpp  WasteNodeClampsWasteLevels.cpp  WasteNodeUrgencyThresholdsAreCorrect.cpp  WasteSystemCalculatesTollsAndNamesForRoute.cpp  WasteSystemInitializesFixedMapAndTolls.cpp
tests/backend/graph/: MapGraphBuildsScaledEuclideanDistances.cpp  MapGraphCalculateRouteDistanceUsesMatrixWeights.cpp  MapGraphEffectiveDistanceAppliesBlockingPenalty.cpp  MapGraphFindNodeIndexAndNeighborsWork.cpp  MapGraphGetDistanceRejectsInvalidNodeId.cpp  MapGraphGetNodeRejectsOutOfRangeIndex.cpp  MapGraphInstallWeightedMatrixValidatesShape.cpp  MapGraphSetEdgeEventIsSymmetricAndClearable.cpp  MapGraphShortestPathAvoidsBlockedRoad.cpp  MapGraphShortestPathFallsBackWhenNoUnblockedPathExists.cpp  MapGraphThrowsWhenNoHqExists.cpp
tests/backend/integration/: FullPipelineCurrentBestRouteCanBeExportedAsSummaryAndDetails.cpp  FullPipelineGeneratesScenarioComparesAndExportsCsv.cpp  FullPipelineIsDeterministicForSameSeedAtBackendLevel.cpp  FullPipelineThresholdCanProduceNoRoutesWithoutCrashing.cpp
tests/backend/persistence/: FileExporterCreatesComparisonCsvWithHeaderAndRows.cpp  (+5 more)
